fixed overflow

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -9,6 +9,8 @@ html{
 html,
 body{
     height: 100%;
+    position:relative;
+    overflow-x:hidden;
 }
 a{
     display:inline-block;
@@ -28,7 +30,6 @@ body{
     font-style: 15px;
     line-height: 24px;
     color:$text;
-    overflow-x: hidden;
 }
 
 .wrapper{
